oauth2-proxy/kustomization/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy-app
  template:
    metadata:
      labels:
        app: oauth2-proxy-app
    spec:
      containers:
      - args:
        - --provider=github
        - --email-domain=*
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        - --pass-access-token
        - --pass-authorization-header
        - --set-authorization-header
        - --set-xauthrequest
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /ping
            port: 4180
          initialDelaySeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 4180
          initialDelaySeconds: 3
          periodSeconds: 10
