oauth2-proxy/kustomization/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    app: oauth2-proxy
